--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "python.linting.flake8Enabled": false,
-  "python.linting.enabled": true,
+  "python.linting.enabled": false,
   "python.linting.mypyEnabled": false,
   "python.linting.pylintEnabled": true
 }
